--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -13,10 +13,10 @@ WriteTimeout = 60
 
 [database]
 User = root
-Password = root
+Password = Liu529966
 Host = 127.0.0.1:3306
 # bsc数据库名
-Bsc = "bsc"
+Bsc = "bsc_explorer"
 # tm数据库名
 TM = "tm"
 
@@ -24,3 +24,10 @@ TM = "tm"
 # 每天定时触发,支持linux crontab语法 @daily is 0 0 * * *
 BscSync = @daily
 TMSync = @daily
+
+
+
+
+[cluster]
+# bsc 节点,后续版本节点信息将会从api接口或数据库中获取
+bschost = "106.3.133.178,106.3.133.179,106.3.133.180,210.73.218.171,210.73.218.172"
