--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -24,8 +24,13 @@ TM = "tm"
 # 每天定时触发,支持linux crontab语法 @daily is 0 0 * * *
 BscSync = @daily
 TMSync = @daily
+UpdateBscBalance = @every 10s
 
 
+[downloader]
+# 设置每次追块的步进
+BscStep = 1000
+TMStep = 100
 
 
 [cluster]
