--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -25,7 +25,7 @@ TM = "tm"
 BscSync = @daily
 TMSync = @daily
 UpdateBscBalance = @every 10s
-
+HandleFailBlock = @every 1m
 
 [downloader]
 # 设置每次追块的步进
