--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -35,4 +35,10 @@ TMStep = 100
 
 [cluster]
 # bsc 节点,后续版本节点信息将会从api接口或数据库中获取
-bschost = "106.3.133.178,106.3.133.179,106.3.133.180,210.73.218.171,210.73.218.172"
+bschost = "106.3.133.178"
+
+
+[log]
+# info/warn/error/debug 小写
+Level = "info"
+File = "./trais.log"
